--- a/Supervised Learning scikit learn/Ch1-Classifications.ipynb
+++ b/Supervised Learning scikit learn/Ch1-Classifications.ipynb
@@ -14,7 +14,7 @@
     "import seaborn as sns\n",
     "\n",
     "\n",
-    "df = pd.read_csv('../Datacamp-SupervisedLearning/dataset/house-votes-84.csv')"
+    "df = pd.read_csv('../dataset/house-votes-84.csv')"
    ]
   },
   {
