--- a/Supervised Learning scikit learn/Ch2-Regression-life_expectancy.ipynb
+++ b/Supervised Learning scikit learn/Ch2-Regression-life_expectancy.ipynb
@@ -42,7 +42,7 @@
     "print(os.listdir(\"../Datacamp-SupervisedLearning\"))\n",
     "\n",
     "# Read the CSV file into a DataFrame: df\n",
-    "df = pd.read_csv('../Datacamp-SupervisedLearning/dataset/gapminder.csv')\n",
+    "df = pd.read_csv('../dataset/gapminder.csv')\n",
     "print(df.head())"
    ]
   },
